tests/bad/example-e02.rat
fn Main () -> Void {
  let mut a = x;
  return;
}
